# Dominion_Simulator

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: card.rs  cli.rs  kingdom.rs  lib.rs  main.rs  player.rs  strategy.rs  supply_pile.rs  utils.rs
core/src/card/constants/: copper.rs  estate.rs  gold.rs  market.rs
core/src/card/constants/base/: chapel.rs  council_room.rs  festival.rs  laboratory.rs  market.rs  smithy.rs  village.rs
core/src/card/constants/supply/: copper.rs  duchy.rs  gold.rs  province.rs  silver.rs
engine/: Cargo.toml
engine/src/: main.rs
src/: card.rs  cli.rs  kingdom.rs  main.rs  player.rs  strategy.rs  supply_pile.rs  utils.rs
src/resource/: BMX.json  format.json
strategies/: action_play_priority.json  big_money_ultimate.json  chapel_money.json  council_room_money.json  smithy_money.json  trash_priority.json  treasure_play_priority.json
strategy_cli/: Cargo.toml
strategy_cli/src/: cli.rs  main.rs
