[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {version = "0.8", features = [ "small_rng" ]}
lazy_static = "1.4.0"
serde = { version ="1.0.164", features = ["derive"]}
tokio = { version = "1.28.2", features = ["full"] }
num_cpus = "1.15.0"
serde_json = "1.0.97"

[lib]
name = "core"
path = "src/lib.rs"
